@@ -325,15 +325,15 @@ bool ClingoPropagator::addClause(Solver& s, uint32 st) {
 	Literal w0 = clause.size > 0 ? clause.lits[0] : lit_false();
 	Literal w1 = clause.size > 1 ? clause.lits[1] : lit_false();
 	uint32  cs = ClauseCreator::status(s, clause);
+	bool local = (todo_.flags & ClauseCreator::clause_no_add) != 0;
 	if (cs & (ClauseCreator::status_unit|ClauseCreator::status_unsat)) {
-		uint32 dl = (cs & ClauseCreator::status_unsat) ? s.level(w0.var()) : s.level(w1.var());
+		uint32 dl = (cs & ClauseCreator::status_unsat) && !local ? s.level(w0.var()) : s.level(w1.var());
 		if (dl < s.decisionLevel() && s.isUndoLevel()) {
 			if ((st & state_ctrl) != 0u) { return false; }
 			if ((st & state_prop) != 0u) { ClingoPropagator::reset(); cancelPropagation(); }
 			s.undoUntil(dl);
 		}
 	}
-	bool local = (todo_.flags & ClauseCreator::clause_no_add) != 0;
 	if (!s.isFalse(w0) || local || s.force(w0, this)) {
 		ClauseCreator::Result res = ClauseCreator::create(s, clause, todo_.flags);
 		if (res.local && local) { db_.push_back(res.local); }
